[package]
name = "argus-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bevy = "0.14.0"
diesel = { version = "2.1", features = ["postgres" ] }
dotenvy = "0.15"
chumsky = "0.8.0"
easy-ml = "1.8.1"
entrait = "0.4"
nalgebra = "0.32.3"
nalgebra-sparse = "0.9.0"
uom = "0.33.0"
